<?xml version="1.0" encoding="utf-8"?>
<!--    Same as welcome screen. Could've used LinearLayout and remove the guideline.-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboard.InstructionFragment">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@id/logo_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/logo_guideline"
        style="@style/logo_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/header_text"
        style="@style/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        app:layout_constraintBottom_toTopOf="@id/instruction1_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/logo_guideline"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/instruction1_text"
        style="@style/main_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom|center_horizontal"
        android:text="@string/instruction_1"
        app:layout_constraintBottom_toTopOf="@id/instruction2_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_text" />

    <TextView
        android:id="@+id/instruction2_text"
        style="@style/main_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/instruction_2"
        app:layout_constraintBottom_toTopOf="@id/instruction3_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instruction1_text" />

    <TextView
        android:id="@+id/instruction3_text"
        style="@style/main_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="top|center_horizontal"
        android:text="@string/instruction_3"
        app:layout_constraintBottom_toTopOf="@id/tapNext_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instruction2_text" />

    <TextView
        android:id="@+id/tapNext_text"
        style="@style/main_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tapNext"
        app:layout_constraintBottom_toTopOf="@id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instruction3_text"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/start_button"
        style="@style/goButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tapNext_text" />

</androidx.constraintlayout.widget.ConstraintLayout>