<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.shoestore.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:launchSingleTop="false"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.shoestore.onboard.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome" >
        <argument
            android:name="user_email"
            app:argType="string" />
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.example.shoestore.onboard.InstructionFragment"
        android:label="@string/instructions"
        tools:layout="@layout/fragment_instruction" >
        <action
            android:id="@+id/action_instructionFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:launchSingleTop="false"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.shoestore.list.ListFragment"
        android:label="@string/shoes_list">
        <action
            android:id="@+id/action_listFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/logout"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.shoestore.detail.DetailFragment"
        android:label="@string/add_shoe">
        <action
            android:id="@+id/action_detailFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>