<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.shoestore.MainViewModel" />
    </data>

<!--    Same as login screen, using ConstraintLayout to make use of the guidelines
        for screen edge margins and to align logo, header, input fields,
        and the buttons together.-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/offset" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/offset" />

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="@id/logo_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/logo_guideline"
            style="@style/logo_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <ImageView
            android:id="@+id/headerIcon_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.34"
            android:contentDescription="@string/add_shoe_icon"
            android:src="@android:drawable/ic_menu_add"
            app:layout_constraintBottom_toBottomOf="@id/header_text"
            app:layout_constraintEnd_toEndOf="@id/header_text"
            app:layout_constraintStart_toStartOf="@id/header_text"
            app:layout_constraintTop_toTopOf="@id/header_text"
            app:tint="@color/green" />

        <TextView
            android:id="@+id/header_text"
            style="@style/header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_shoe"
            app:layout_constraintBottom_toTopOf="@id/name_shoe_label_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/logo_guideline" />

        <TextView
            android:id="@+id/name_shoe_label_text"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:labelFor="@id/name_shoe_label_editText"
            android:text="@string/shoe_name"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/header_text" />

        <!--        NAME-->
        <EditText
            android:id="@+id/name_shoe_label_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={viewModel.shoeName}"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/name_shoe_label_text" />

        <TextView
            android:id="@+id/company_shoe_label_text"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:labelFor="@id/company_shoe_label_editText"
            android:text="@string/shoe_company"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/name_shoe_label_editText" />

        <!--        COMPANY-->
        <EditText
            android:id="@+id/company_shoe_label_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={viewModel.shoeCompany}"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/company_shoe_label_text" />

        <TextView
            android:id="@+id/size_shoe_label_text"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:labelFor="@id/size_shoe_label_editText"
            android:text="@string/shoe_size"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/company_shoe_label_editText" />

        <!--        SIZE-->
        <EditText
            android:id="@+id/size_shoe_label_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:text="@={viewModel.shoeSize}"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/size_shoe_label_text" />

        <TextView
            android:id="@+id/desc_shoe_label_text"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:labelFor="@id/desc_shoe_label_editText"
            android:text="@string/shoe_description"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/size_shoe_label_editText" />

        <!--        DESCRIPTION-->
        <EditText
            android:id="@+id/desc_shoe_label_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:text="@={viewModel.shoeDesc}"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/desc_shoe_label_text" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
            app:layout_constraintEnd_toStartOf="@id/save_button"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/desc_shoe_label_editText"
            app:layout_constraintVertical_bias="1" />

        <Button
            android:id="@+id/save_button"
            style="@style/goButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/cancel_button"
            app:layout_constraintTop_toBottomOf="@id/desc_shoe_label_editText"
            app:layout_constraintVertical_bias="1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/offset" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>